--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "generate predicates for koa authorization",
   "main": "src/index.js",
   "scripts": {
-    "test": "mocha 'src/**/**.spec.js"
+    "test": "mocha 'tests/**.spec.js'"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,13 @@
   "bugs": {
     "url": "https://github.com/rotemtam/koa-predicate-factory/issues"
   },
-  "homepage": "https://github.com/rotemtam/koa-predicate-factory#readme"
+  "homepage": "https://github.com/rotemtam/koa-predicate-factory#readme",
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "co-mocha": "^1.1.2",
+    "co-supertest": "0.0.10",
+    "koa": "^1.2.1",
+    "mocha": "^2.5.3",
+    "supertest": "^1.2.0"
+  }
 }
